# agentcore-starter

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  run.sh  sonar-project.properties  tasks.py
.claude/agents/: backlog-manager.md  code-reviewer.md  design-review.md  docs-sync.md  incident-responder.md  issue-worker.md  onboarding.md  orchestrator.md  security-auditor.md
.claude/skills/: README.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: agent-safe-scope-issue-retrigger.yml  agent-safe-scope.yml  backup-test.yml  ci.yml  deploy-dev.yml  protection-drift.yml  release-drafter.yml  security.yml
docs/: _validation_artifact_issue77.md  architecture.md
docs-site/: index.md
docs-site/.vitepress/: config.mjs
docs-site/agents/: overview.md  sessions.md
docs-site/getting-started/: introduction.md  quick-start.md
docs-site/operations/: endpoints.md  security.md
docs/adr/: 0001-bedrock-converse-api.md  0002-streaming-lambda-web-adapter.md  0003-inline-agent-and-session-memory.md  0004-agentcore-runtime-feasibility-summary.md  0004-agentcore-runtime-feasibility.md  0005-orchestrator-agent.md  0006-skills-system.md  0007-orchestrator-protocol-codification.md  0008-issue-worker-push-discipline.md  README.md
docs/retros/: 2026-04-26-strategy-session-retro.md  README.md
docs/runbooks/: backup-restore.md
infra/: README.md  app.py  branch-protection.expected.json
infra/stacks/: starter_stack.py
scripts/: check_agent_safe_scope.py  check_branch_protection_drift.py
src/starter/: README.md  handler.py  logging_config.py  metrics.py  startup.py
tests/: README.md
tests/e2e/: conftest.py  test_streaming_e2e.py
tests/integration/: conftest.py  test_auth_state_store.py  test_startup.py
tests/unit/: test_agents_agentcore.py  test_agents_api.py  test_agents_bedrock.py  (+14 more)
ui/: README.md  index.html  package-lock.json  package.json
(+49 files in other folders)
