[project]
name = "hive"
dynamic = ["version"]
description = "Shared persistent memory MCP server for Claude agents and teams"
requires-python = ">=3.10"
dependencies = [
    "aws-embedded-metrics>=3.5.0",
    "boto3>=1.42.96",
    "fastapi>=0.136.1",
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
    "mangum>=0.21.0",
    "pydantic>=2.13.3",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.42.96",
    "mypy-boto3-bedrock-runtime>=1.42.82",
    "mypy-boto3-s3vectors>=1.42.3",
    "invoke>=3.0.3",
    "moto>=5.1.22",
    "mypy>=1.20.2",
    "pip-audit>=2.10.0",
    "playwright>=1.58.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
infra = [
    "aws-cdk-lib>=2.251.0",
    "cdk-nag>=2.38.1",
    "constructs>=10.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI intentionally uses Depends() in function defaults
ignore = ["E501", "B008"]

[tool.coverage.run]
source = ["src/hive"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jose.*", "moto.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/hive"]
